--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,13 @@ h3+p {
     font-family: "Roboto";
     font-weight: 400;
 }
+
+.conteiner {
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.section {
+    color: white;
+}
