--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --workers-color: #757575;
     --button-color: #2196F3;
     --text-color: #212121;
+    --hover-color: #2196F3;
 }
 
 button {
@@ -73,4 +74,8 @@ h3+p {
 
 .section {
     color: white;
+}
+
+.mainlist-sites :hover {
+    color: var(--hover-color);
 }
