--- a/css/style.css
+++ b/css/style.css
@@ -3,68 +3,84 @@
     --workers-color: #757575;
     --button-color: #2196F3;
     --text-color: #212121;
-    --hover-color: #2196F3;
 }
 
 
 
 .button {
     background-color: var(--button-color);
-    width: 216px;
-    height: 50px;
+    font-size: 16px;
+    line-height: 187%;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: #fff;
+    font-weight: 700;
 }
 
 .hero {
     background-color: var(--section-color);
 }
 
-.workers h3 {
+.underworkers {
     color: var(--workers-color);
 }
 
 .list-p {
     color: var(--text-color);
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.03em;
 }
 
-.header-conteiner-nav {
-    font-family: "Roboto";
+.header-link {
+    /* font-family: "Roboto"; */
     font-weight: 500;
-}
-
-a[href="/"] {
-    font-family: "Raleway";
-    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.02em;
 }
 
 .section-h1 {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 900;
+    font-size: 44px;
+    line-height: 136%;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
 }
 
-section h2 {
-    font-family: "Roboto";
+.workers-h2 {
+    /* font-family: "Roboto"; */
     font-weight: 700;
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .workers-h2-item p {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 500;
 }
 
 .underworkers {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.03em;
+    text-align: center;
 }
 
-
-
-/* li+h3 { 
+.images-ourjob {
     font-family: "Roboto";
     font-weight: 700;
- }  */
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    text-align: center;
+}
 
 .list-p {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 400;
 }
 
@@ -78,20 +94,20 @@ section h2 {
     color: white;
 }
 
-.header-mainlist-sites :hover {
-    color: var(--hover-color);
+.header-list-item :hover {
+    color: var(--button-color)
 }
 
 a[href="/."] :hover {
-    color: var(--hover-color);
+    color: var(--button-color)
 }
 
 .active-link {
-    color: var(--hover-color);
+    color: var(--button-color)
 }
 
 .logo {
-    color: var(--hover-color);
+    color: var(--button-color)
 }
 
 .logoblack {
@@ -122,7 +138,7 @@ a[href="/."] :hover {
 }
 
 .all .item {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 500;
 }
 
@@ -139,6 +155,59 @@ a[href="/."] :hover {
 }
 
 .ourwork-atention {
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+body {
+    font-family: "Roboto";
+}
+
+a[href="/"] {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+}
+
+.logoblack {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+}
+
+.workers-p {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.workers {
+    background: #f5f4fa;
+}
+
+.header-mainlist-sites :hover {
+    color: var(--button-color);
+}
+
+.portfolios {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 162%;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: #fff;
+}
+
+.footer {
+    width: 1600px;
+    height: 252px;
 }
