--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
     --text-color: #212121;
 }
 
-
+body {
+    font-family: "Roboto";
+}
 
 .button {
     background-color: var(--button-color);
@@ -94,16 +96,6 @@
     color: white;
 }
 
-/* a[href="//"] :hover {
-    color: var(--button-color)
-    font-family: "Roboto"; 
-        font-weight: 500;
-        font-size: 14px;
-        letter-spacing: 0.02em;
-        font-family: "Roboto"; 
-
-} */
-
 .active-link {
     color: var(--button-color)
 }
@@ -120,7 +112,7 @@
     color: var(--workers-color);
 }
 
-.nameofsite {
+.item-nameofsite {
     /* font-family: "Roboto";  */
     font-weight: 700;
     font-size: 18px;
@@ -128,7 +120,7 @@
     letter-spacing: 0.06em;
 }
 
-.portfoli {
+.item-nameofsite-portfoli {
     /* font-family: "Roboto";  */
     font-weight: 400;
     font-size: 16px;
@@ -136,18 +128,9 @@
     letter-spacing: 0.03em;
 }
 
-.header-conteiner a {
-    font-family: "Roboto";
-    font-weight: 700;
-}
 
 .button :active {
     color: #2196F3;
-}
-
-.all .item {
-    /* font-family: "Roboto"; */
-    font-weight: 500;
 }
 
 .footer {
@@ -168,10 +151,6 @@
     font-size: 14px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-}
-
-body {
-    font-family: "Roboto";
 }
 
 a[href="/"] {
@@ -226,4 +205,30 @@ a[href="/"] {
     font-size: 14px;
     letter-spacing: 0.02em;
     color: var(--button-color);
+}
+
+.phone-number {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    color: var(--workers-color);
+}
+
+.footer-link {
+    /* font-family: "Roboto"; */
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-phone-number {
+    /* font-family: "Roboto"; */
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 171%;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
