--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ body {
     font-size: 18px;
     line-height: 200%;
     letter-spacing: 0.06em;
+    color: var(--text-color);
 }
 
 .item-nameofsite-portfoli {
@@ -126,6 +127,7 @@ body {
     font-size: 16px;
     line-height: 187%;
     letter-spacing: 0.03em;
+    color: var(--workers-color);
 }
 
 
