--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 .button {
     background-color: var(--button-color);
     font-size: 16px;
-    line-height: 187%;
+    line-height: 1.9;
     letter-spacing: 0.06em;
     text-align: center;
     color: #fff;
@@ -30,7 +30,7 @@ body {
 .list-p {
     color: var(--text-color);
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.7;
     letter-spacing: 0.03em;
 }
 
@@ -45,7 +45,7 @@ body {
     /* font-family: "Roboto"; */
     font-weight: 900;
     font-size: 44px;
-    line-height: 136%;
+    line-height: 1.4;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     text-align: center;
@@ -92,20 +92,20 @@ body {
     margin: 0 auto;
 }
 
-.section {
-    color: white;
-}
-
 .active-link {
     color: var(--button-color)
 }
 
-.logo {
+.conteiner-logo {
     color: var(--button-color)
 }
 
-.logoblack {
-    color: #212121;
+.conteiner-logo-black {
+    color: #000;
+}
+
+.conteiner-logo-white {
+    color: #fff;
 }
 
 .portfoli {
@@ -116,7 +116,7 @@ body {
     /* font-family: "Roboto";  */
     font-weight: 700;
     font-size: 18px;
-    line-height: 200%;
+    line-height: 2.0;
     letter-spacing: 0.06em;
     color: var(--text-color);
 }
@@ -125,7 +125,7 @@ body {
     /* font-family: "Roboto";  */
     font-weight: 400;
     font-size: 16px;
-    line-height: 187%;
+    line-height: 1.9;
     letter-spacing: 0.03em;
     color: var(--workers-color);
 }
@@ -147,7 +147,7 @@ body {
     color: var(--workers-color);
 }
 
-.ourwork-atention {
+.conteiner-ourwork-atention {
     /* font-family: "Roboto"; */
     font-weight: 700;
     font-size: 14px;
@@ -162,7 +162,7 @@ a[href="/"] {
     letter-spacing: 0.03em;
 }
 
-.logoblack {
+.conteiner-logo-black {
     font-family: "Raleway";
     font-weight: 700;
     font-size: 26px;
@@ -190,7 +190,7 @@ a[href="/"] {
     /* font-family: "Roboto"; */
     font-weight: 500;
     font-size: 16px;
-    line-height: 162%;
+    line-height: 1.6;
     letter-spacing: 0.03em;
     text-align: center;
     color: #fff;
@@ -201,7 +201,8 @@ a[href="/"] {
     height: 252px;
 }
 
-.gmail :hover {
+.gmail,
+.phone-number :hover {
     /* font-family: "Roboto"; */
     font-weight: 500;
     font-size: 14px;
@@ -221,7 +222,7 @@ a[href="/"] {
     /* font-family: "Roboto"; */
     font-weight: 400;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
@@ -230,7 +231,15 @@ a[href="/"] {
     /* font-family: "Roboto"; */
     font-weight: 400;
     font-size: 14px;
-    line-height: 171%;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.gmail {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    color: var(--workers-color);
 }
