--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,13 @@ body {
     background-color: var(--section-color);
 }
 
-.underworkers {
+.underworkers-title {
     color: var(--workers-color);
 }
 
-.list-p {
+.list-py {
+    /* font-family: "Roboto"; */
+    font-weight: 400;
     color: var(--text-color);
     font-size: 14px;
     line-height: 1.7;
@@ -42,7 +44,7 @@ body {
     letter-spacing: 0.02em;
 }
 
-.section-h1 {
+.section-x1 {
     /* font-family: "Roboto"; */
     font-weight: 900;
     font-size: 44px;
@@ -53,7 +55,7 @@ body {
     color: #fff;
 }
 
-.workers-h2 {
+.workers-x2 {
     /* font-family: "Roboto"; */
     font-weight: 700;
     font-size: 36px;
@@ -61,12 +63,12 @@ body {
     text-align: center;
 }
 
-.workers-h2-item p {
-    /* font-family: "Roboto"; */
+.workers-pi {
+    font-family: "Roboto";
     font-weight: 500;
 }
 
-.underworkers {
+.underworkers–title {
     /* font-family: "Roboto"; */
     font-weight: 400;
     font-size: 16px;
@@ -82,11 +84,6 @@ body {
     text-align: center;
 }
 
-.list-p {
-    /* font-family: "Roboto"; */
-    font-weight: 400;
-}
-
 .conteiner {
     width: 1200px;
     padding: 0 15px;
@@ -98,7 +95,11 @@ body {
 }
 
 .header-logo {
-    color: var(--button-color)
+    color: var(--button-color);
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
 }
 
 .header-logo-black {
@@ -113,7 +114,7 @@ body {
     color: var(--workers-color);
 }
 
-.item-nameofsite {
+.item-nameofsite-title {
     /* font-family: "Roboto";  */
     font-weight: 700;
     font-size: 18px;
@@ -148,7 +149,7 @@ body {
     color: var(--workers-color);
 }
 
-.conteiner-ourwork-atention {
+.ourwork-atention–title {
     /* font-family: "Roboto"; */
     font-weight: 700;
     font-size: 14px;
@@ -156,12 +157,7 @@ body {
     text-transform: uppercase;
 }
 
-a[href="/"] {
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 26px;
-    letter-spacing: 0.03em;
-}
+
 
 .header-logo-black {
     font-family: "Raleway";
@@ -183,11 +179,11 @@ a[href="/"] {
     background: #f5f4fa;
 }
 
-.header-mainlist-sites :hover {
+.header-mainlist-sites-item:hover {
     color: var(--button-color);
 }
 
-.portfolios {
+.portfolios-le-item {
     /* font-family: "Roboto"; */
     font-weight: 500;
     font-size: 16px;
@@ -200,15 +196,6 @@ a[href="/"] {
 .footer {
     width: 1600px;
     height: 252px;
-}
-
-.gmail,
-.phone-number :hover {
-    /* font-family: "Roboto"; */
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.02em;
-    color: var(--button-color);
 }
 
 .phone-number {
@@ -238,17 +225,17 @@ a[href="/"] {
 }
 
 .gmail {
-    font-family: var(--font-family);
+    /* font-family: "Roboto"; */
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
     color: var(--workers-color);
 }
 
-.header-list-li :hover {
+.portfolios-li:hover {
     color: var(--button-color);
 }
 
-.portfolios-li :hover {
+.header-link:hover {
     color: var(--button-color);
 }
