--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: "Roboto";
+    box-sizing: border-box;
 }
 
 .button {
@@ -15,13 +16,19 @@ body {
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.06em;
-    text-align: center;
+    /* text-align: center; */
     color: #fff;
     font-weight: 700;
+    width: 216px;
+    height: 50px;
+    display: block;
+    margin: 0 auto;
 }
 
 .hero {
     background-color: var(--section-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .underworkers-title {
@@ -35,6 +42,7 @@ body {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    /* display: block; */
 }
 
 .header-link {
@@ -51,7 +59,7 @@ body {
     line-height: 1.4;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    text-align: center;
+    /* text-align: center; */
     color: #fff;
 }
 
@@ -151,6 +159,7 @@ body {
     font-size: 14px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    /* display: block; */
 }
 
 
@@ -164,6 +173,10 @@ body {
 
 .workers {
     background: #f5f4fa;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    /* width: 1600px;
+    height: 648px; */
 }
 
 .portfolios-sites-item {
@@ -217,4 +230,18 @@ body {
 
 .portfolios-sites-item-link:hover {
     color: var(--button-color);
+}
+
+.ourwork {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.images {
+    padding-bottom: 94px;
+}
+
+.footer-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
