--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,99 @@ body {
     box-sizing: border-box;
 }
 
+.conteiner {
+    width: 1200px;
+    padding: 0 15px;
+    margin: 0 auto;
+    outline: 1px dashed tomato;
+}
+
+/*? header */
+.header {
+    background-color: aqua;
+}
+
+.header-logo-black {
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+}
+
+.header-niv {
+    display: inline-block;
+}
+
+.header-mainlist-sites-item {
+    display: inline;
+}
+
+.header-second-list-item {
+    display: inline;
+}
+
+.header-second-list {
+    display: inline;
+}
+
+.header-link {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+}
+
+.header-link:hover {
+    color: var(--button-color);
+}
+
+.header-logo {
+    color: var(--button-color);
+    font-family: "Raleway";
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+    /* display: inline-block; */
+}
+
+.header-logo-black {
+    color: #000;
+}
+
+.contacts-links {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 0.02em;
+    color: var(--workers-color);
+}
+
+.contacts-links:hover {
+    color: var(--button-color);
+}
+
+.active-link {
+    color: var(--button-color)
+}
+
+/*? main */
+.hero {
+    background-color: var(--section-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.section-x1 {
+    /* font-family: "Roboto"; */
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.4;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    /* text-align: center; */
+    color: #fff;
+}
+
 .button {
     font-family: "Roboto";
     background-color: var(--button-color);
@@ -25,42 +118,43 @@ body {
     margin: 0 auto;
 }
 
-.hero {
-    background-color: var(--section-color);
-    padding-top: 200px;
-    padding-bottom: 200px;
-}
-
-.underworkers-title {
-    color: var(--workers-color);
-}
-
-.list-text {
+.ourwork-atention–title {
     /* font-family: "Roboto"; */
-    font-weight: 400;
-    color: var(--text-color);
+    font-weight: 700;
     font-size: 14px;
-    line-height: 1.7;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
     /* display: block; */
 }
 
-.header-link {
-    /* font-family: "Roboto"; */
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.02em;
+.ourwork-list-ourwurk-item {
+    display: inline-block;
 }
 
-.section-x1 {
-    /* font-family: "Roboto"; */
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.4;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    /* text-align: center; */
-    color: #fff;
+.ourwork {
+    padding-top: 94px;
+    background-color: antiquewhite;
+}
+
+.images {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.images-ourjob-list-item-img {
+    display: inline;
+}
+
+.images-ourjob-list-item {
+    display: inline;
+}
+
+.images-ourjob {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .workers-title {
@@ -84,42 +178,35 @@ body {
     text-align: center;
 }
 
-.images-ourjob {
-    font-family: "Roboto";
-    font-weight: 700;
-    font-size: 36px;
+.underworkers-title {
+    color: var(--workers-color);
+}
+
+.workers {
+    background: #f5f4fa;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    /* width: 1600px;
+    height: 648px; */
+}
+
+.workers-title-item {
+    display: inline-block;
+}
+
+/*? portfolio-main */
+.portfolios-sites-item {
+    /* font-family: "Roboto"; */
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
     letter-spacing: 0.03em;
     text-align: center;
-}
-
-.conteiner {
-    width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
-
-.active-link {
-    color: var(--button-color)
-}
-
-.header-logo {
-    color: var(--button-color);
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 26px;
-    letter-spacing: 0.03em;
-}
-
-.header-logo-black {
-    color: #000;
-}
-
-.footer-logo-white {
     color: #fff;
 }
 
-.portfoli {
-    color: var(--workers-color);
+.portfolios-sites-item-link:hover {
+    color: var(--button-color);
 }
 
 .item-nameofsite-title {
@@ -140,10 +227,23 @@ body {
     color: var(--workers-color);
 }
 
-
-.button:active {
-    color: #2196F3;
+.list-text {
+    /* font-family: "Roboto"; */
+    font-weight: 400;
+    color: var(--text-color);
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    /* display: block; */
 }
+
+.footer-logo-white {
+    color: #fff;
+}
+
+/* .portfoli {
+    color: var(--workers-color);
+} */
 
 .footer {
     background-color: var(--section-color);
@@ -153,45 +253,9 @@ body {
     color: #ffff;
 }
 
-.ourwork-atention–title {
-    /* font-family: "Roboto"; */
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    /* display: block; */
-}
-
-
-
-.header-logo-black {
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 26px;
-    letter-spacing: 0.03em;
-}
-
-.workers {
-    background: #f5f4fa;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    /* width: 1600px;
-    height: 648px; */
-}
-
-.portfolios-sites-item {
-    /* font-family: "Roboto"; */
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.6;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color: #fff;
-}
-
 .footer {
-    width: 1600px;
-    height: 252px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-link {
@@ -210,38 +274,4 @@ body {
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-}
-
-.header-link:hover {
-    color: var(--button-color);
-}
-
-.contacts-links {
-    /* font-family: "Roboto"; */
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.02em;
-    color: var(--workers-color);
-}
-
-.contacts-links:hover {
-    color: var(--button-color);
-}
-
-.portfolios-sites-item-link:hover {
-    color: var(--button-color);
-}
-
-.ourwork {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.images {
-    padding-bottom: 94px;
-}
-
-.footer-section {
-    padding-top: 60px;
-    padding-bottom: 60px;
 }
