--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body {
 
 .workers-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
