--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    margin-left: 344px;
 }
 
 .header-link {
@@ -53,6 +54,8 @@ body {
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .header-link:hover {
@@ -78,6 +81,8 @@ body {
     font-size: 14px;
     letter-spacing: 0.02em;
     color: var(--workers-color);
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .contacts-links:hover {
