--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
+    justify-content: baseline;
 }
 
 .header-logo-black {
@@ -41,11 +42,11 @@ body {
     justify-content: flex-start;
 }
 
-.header-mainlist-list-item {
+.header-mainlist-sites-item {
     margin-right: 50px;
 }
 
-.header-mainlist-list-item:last-child {
+.header-mainlist-sites-item:last-child {
     margin-right: 0px;
 }
 
@@ -74,8 +75,8 @@ body {
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
-    margin-left: 25px;
-    margin-right: 25px;
+    /* margin-left: 25px;
+    margin-right: 25px; */
 }
 
 .header-link:hover {
