--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ body {
     justify-content: flex-start;
 }
 
-.ourwork-atention–title {
+.ourwork–title {
     /* font-family: "Roboto"; */
     font-weight: 700;
     font-size: 14px;
@@ -185,6 +185,15 @@ body {
 .ourwork {
     padding-top: 94px;
     background-color: antiquewhite;
+}
+
+.list-text {
+    /* font-family: "Roboto"; */
+    font-weight: 400;
+    color: var(--text-color);
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
 }
 
 .images {
@@ -268,7 +277,7 @@ body {
 
 .workers-title-item {
     background-color: #fff;
-    border-radius: 0%;
+    border-radius: 0 0 4px 4px;
 }
 
 /* .workers-title-item {
@@ -330,15 +339,6 @@ body {
     color: var(--workers-color);
 }
 
-.list-text {
-    /* font-family: "Roboto"; */
-    font-weight: 400;
-    color: var(--text-color);
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-}
-
 .works {
     margin-top: 30px;
 }
@@ -390,10 +390,6 @@ body {
     flex-direction: column;
 }
 
-.footer-list {
-    margin-top: 20px;
-}
-
 .footer-list-item {
     margin-top: 9px;
 }
@@ -403,5 +399,5 @@ body {
 }
 
 .address {
-    margin-top: 9px;
+    margin-top: 20px;
 }
