--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 
 /*? header */
 .header {
-    background-color: aqua;
+    background: #fff;
     padding-top: 24px;
     padding-bottom: 25px;
 }
@@ -38,6 +38,7 @@ body {
 
 .header-mainlist-list {
     display: flex;
+    justify-content: center;
 }
 
 .header-mainlist-sites-item {
@@ -194,6 +195,7 @@ body {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    margin-top: 10px;
 }
 
 .images {
@@ -297,6 +299,7 @@ body {
     margin-right: 8px;
     width: 130px;
     height: 38px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
 }
 
 .all {
@@ -339,8 +342,8 @@ body {
     color: var(--workers-color);
 }
 
-.works {
-    margin-top: 30px;
+.portfolios-sites-item-link {
+    border-radius: 4px;
 }
 
 .works-list {
@@ -348,6 +351,14 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+    margin-top: 30px;
+}
+
+.works-list-item {
+    border: 1px solid #eee;
+    width: 370px;
+    height: 404px;
+    background: #fff;
 }
 
 .footer-logo-white {
@@ -395,7 +406,7 @@ body {
 }
 
 .footer-list-item:first-child {
-    margin-top: 0p;
+    margin-top: 0px;
 }
 
 .address {
