--- a/css/style.css
+++ b/css/style.css
@@ -310,9 +310,12 @@ body {
     background: #f5f4fa;
     padding-top: 6px;
     padding-bottom: 6px;
+    padding-left: 22px;
+    padding-right: 22px;
+    border-radius: 4px;
 }
 
-.portfolios-sites-item-link:hover {
+.portfolios-button:hover {
     color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
     background: #2196f3;
