--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ body {
     padding-left: 22px;
     padding-right: 22px;
     border-radius: 4px;
+    border: none;
 }
 
 .portfolios-button:hover {
