--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,17 @@ body {
     margin-right: 30px;
 }
 
+.ourwork-list-ourwurk-item::before {
+    /* border-radius: 4px; */
+    width: 270px;
+    height: 120px;
+    background: #f5f4fa;
+    /* background-position: top; */
+    content: '';
+    background-image: url(../images/antenna\ 1.jpg),
+        url(../images/clock\ 1.jpg), url(../images/diagram\ 1.jpg), url(../images/astronaut\ 1.jpg3);
+}
+
 .ourwork-list-ourwurk-item:last-of-type {
     margin: 0px;
 }
