--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --workers-color: #757575;
     --button-color: #2196F3;
     --text-color: #212121;
+    --background-color: #f5f4fa;
 }
 
 body {
@@ -181,14 +182,31 @@ body {
 }
 
 .ourwork-list-ourwurk-item::before {
-    /* border-radius: 4px; */
-    width: 270px;
+    margin-bottom: 30px;
+    content: "";
+    display: block;
     height: 120px;
-    background: #f5f4fa;
-    /* background-position: top; */
-    content: '';
-    background-image: url(../images/antenna\ 1.jpg),
-        url(../images/clock\ 1.jpg), url(../images/diagram\ 1.jpg), url(../images/astronaut\ 1.jpg3);
+    width: 270px;
+    border-radius: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--background-color);
+}
+
+.ourwork-list-ourwurk-item:nth-child(1)::before {
+    background-image: url(../images/antenna.jpg);
+}
+
+.ourwork-list-ourwurk-item:nth-child(2)::before {
+    background-image: url(../images/clock.jpg);
+}
+
+.ourwork-list-ourwurk-item:nth-child(3)::before {
+    background-image: url(../images/diagram.jpg);
+}
+
+.ourwork-list-ourwurk-item:nth-child(4)::before {
+    background-image: url(../images/astronaut.jpg);
 }
 
 .ourwork-list-ourwurk-item:last-of-type {
