--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ body {
 .works-list-item {
     /* border: 1px solid #eee; */
     background: #fff;
-    width: calc((100%-60px)/3);
+    width: calc((100% - 60px) / 3);
     background: #fff;
     padding-bottom: 20px;
 }
