--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ body {
     background-size: cover;
 }
 
+.heromain::before {
+    background: rgba(47, 48, 58, 0.4);
+}
+
 .heromain {
     display: flex;
     flex-direction: column;
@@ -170,6 +174,7 @@ body {
     border-radius: 4px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     border: none;
+    padding: 10px 32px;
 }
 
 .button:active {
@@ -401,7 +406,7 @@ body {
 .works-list-item {
     /* border: 1px solid #eee; */
     background: #fff;
-    width: calc((100% - 60px) / 3);
+    flex-basis: calc((100% - 60px) / 3);
     background: #fff;
     padding-bottom: 20px;
 }
