--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
-    outline: 1px dashed tomato;
+
 }
 
 /*? header */
@@ -120,15 +120,10 @@ body {
 
 /*? main */
 .hero {
-    background-color: var(--section-color);
+    /* background-color: var(--section-color); */
     padding-top: 200px;
     padding-bottom: 200px;
-}
-
-.hero::before {
-    width: 1600px;
-    height: 600px;
-    content: "";
+    content: '';
     display: block;
     background-repeat: no-repeat;
     background-position: center;
