--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body {
     display: block;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(../images/img1.jpg);
+    background-image: linear-gradient(to right, rgba(48, 47, 47, 0.4), rgba(49, 47, 47, 0.4)), url(../images/img1.jpg);
     background-size: cover;
     background-color: var(--section-color);
 }
