--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ body {
 
 .ourwork {
     padding-top: 94px;
-    background-color: antiquewhite;
 }
 
 .list-text {
@@ -351,7 +350,7 @@ body {
     border: none;
 }
 
-.portfolios-button:active {
+.activ-link {
     color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
     background: #2196f3;
