--- a/css/style.css
+++ b/css/style.css
@@ -388,10 +388,15 @@ body {
     width: 170px;
     height: 92px;
     cursor: pointer;
+    color: #2196F3;
 }
 
 .svg {
-    color: #AFB1B8;
+    fill: #AFB1B8;
+}
+
+.svg:hover {
+    fill: #2196F3;
 }
 
 .workers {
