--- a/css/style.css
+++ b/css/style.css
@@ -334,16 +334,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
     margin-bottom: 30px;
 }
 
-.social-media-list-item:not(4) {
+.social-media-list-item {
     margin-right: 10px;
+    fill: #AFB1B8;
 }
 
 .social-media-list-item:hover {
-    color: white;
+    fill: #fff;
     background-color: var(--button-color);
+}
+
+.svgs {
+    fill: #AFB1B8;
+}
+
+.svgs:hover {
+    fill: #fff;
+}
+
+.social-media-list-link {
+    fill: #AFB1B8;
 }
 
 .clients {
@@ -557,6 +571,7 @@ body {
 
 .social-links {
     display: flex;
+    justify-content: space-between;
 }
 
 .social-links-item {
