--- a/css/style.css
+++ b/css/style.css
@@ -341,11 +341,17 @@ body {
 .social-media-list-item {
     margin-right: 10px;
     fill: #AFB1B8;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .social-media-list-item:hover {
     fill: #fff;
     background-color: var(--button-color);
+    border-radius: 50px;
 }
 
 .svgs {
@@ -575,12 +581,20 @@ body {
 }
 
 .social-links-item {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-right: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
 }
 
 .social-links-item:hover {
-    color: #fff;
     background-color: #2196f3;
+    fill: #fff;
+    border-radius: 50%;
 }
 
 .address {
